<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/shop_name"
        android:gravity="center"
        android:textSize="20sp"
        >
    </TextView>
    <ImageView
        android:src="@drawable/capybara_in_a_grocery"
        android:layout_width="match_parent"
        android:layout_height="200dp">
    </ImageView>
    <TextView
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order_type"
        >
    </TextView>
    <RadioGroup
        android:id="@+id/order_type_rg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/radio_button_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delivery">
        </RadioButton>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pickup">
        </RadioButton>
    </RadioGroup>
    <Button
        android:layout_marginHorizontal="80dp"
        android:layout_marginVertical="10dp"
        android:backgroundTint="@color/teal"
        android:id="@+id/fetchDataButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_products"
        >
    </Button>
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TableLayout
            android:id="@+id/groceriesList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </TableLayout>
    </ScrollView>


</LinearLayout>